# ChangeLog for dev-java/cardme
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Sep 2013; Johann Schmitz <ercpe@gentoo.org> cardme-0.2.9.ebuild,
  cardme-0.4.0.ebuild:
  Fixed the cardme ebuilds: depend on app-arch/zip and use proper ant task
  declaration

  19 Sep 2013; Justin Lecher <jlec@gentoo.org> cardme-0.2.9.ebuild:
  Install jar with correctly slotted name

  19 Sep 2013; Justin Lecher <jlec@gentoo.org> cardme-0.4.0.ebuild,
  metadata.xml:
  Add missing dep on dev-java/ant-junit

  15 Sep 2013; Johann Schmitz <ercpe@gentoo.org> cardme-0.2.9.ebuild,
  cardme-0.4.0.ebuild, files/0.4.0-build.xml:
  Cleaned 0.4.0 ebuild, added slots to both versions

  14 Sep 2013; Johann Schmitz <ercpe@gentoo.org> cardme-0.2.9.ebuild:
  Cleaned up cardme-0.2.9 for tree

  07 Sep 2013; Johann Schmitz <ercpe@gentoo.org> cardme-0.2.9.ebuild,
  cardme-0.4.0.ebuild, files/0.4.0-build.xml:
  Fixed cardme-0.2.9 ebuild

*cardme-0.4.0 (07 Jul 2013)

  07 Jul 2013; johann@j-schmitz.net +cardme-0.4.0.ebuild,
  +files/0.4.0-build.xml, +metadata.xml:
  Added ebuild for cardme