@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/cardme
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  16 Aug 2015; Johann Schmitz <ercpe@gentoo.org> cardme-0.2.9.ebuild,
+  cardme-0.4.0.ebuild:
+  dev-java/cardme: Updated ebuild headers to match new $Id$ line
 
   20 Sep 2013; Johann Schmitz <ercpe@gentoo.org> cardme-0.2.9.ebuild,
   cardme-0.4.0.ebuild:
